--- a/index.html
+++ b/index.html
@@ -1,52 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Contact form</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/images/favicon-32x32.png"
+        />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+            rel="stylesheet"
+        />
 
-  Contact Us
+        <link rel="stylesheet" href="css/main.css" />
+        <script src="/js/main.js" defer></script>
+        <!-- <script src="https://smtpjs.com/v3/smtp.js" defer></script> -->
 
-  First Name
-  This field is required
+        <title>Frontend Mentor | Contact form</title>
+    </head>
+    <body>
+        <header>
+            <h1>Contact Form</h1>
+        </header>
+        <main>
+            <form action="">
+                <fieldset>
+                    <legend>Contact Us</legend>
+                    <div class="inputCntr">
+                        <label for="fname" id="fnameLabel"
+                            >First name <span aria-hidden="true">*</span></label
+                        >
+                        <br />
+                        <input
+                            type="text"
+                            id="fname"
+                            name="fname"
+                            autocomplete="off"
+                            required
+                        />
+                    </div>
+                    <p id="fnameErr" aria-labelledby="fnameLabel">
+                        This field is required
+                    </p>
 
-  Last Name
-  This field is required
+                    <div class="inputCntr">
+                        <label for="lname" id="lnameLabel"
+                            >Last name <span aria-hidden="true">*</span></label
+                        >
+                        <br />
+                        <input
+                            type="text"
+                            id="lname"
+                            name="lname"
+                            autocomplete="off"
+                            required
+                        />
+                    </div>
+                    <p id="lnameErr" aria-labelledby="lnameLabel">
+                        This field is required
+                    </p>
 
-  Email Address
-  Please enter a valid email address
-  This field is required
+                    <div class="inputCntr">
+                        <label for="email" id="emailLabel" 
+                            >Email <span aria-hidden="true">*</span></label
+                        >
+                        <br />
+                        <input
+                            type="email"
+                            id="email"
+                            name="email"
+                            autocomplete="off"
+                            required
+                        />
+                    </div>
+                    <p id="emailErr" aria-labelledby="emailLabel">
+                        Please enter a valid email address
+                    </p>
 
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
+                    <fieldset class="inputCntr">
+                        <legend id="qtypeLabel">Query Type</legend>
+                        <input
+                            type="radio"
+                            name="qtype"
+                            id="genquiry"
+                            required
+                        />
+                        <label for="genquiry" id="genquiryLabel"
+                            >General Enquiry</label
+                        >
+                        <br />
+                        <input
+                            type="radio"
+                            name="qtype"
+                            id="srequest"
+                            required
+                        />
+                        <label for="srequest" id="srequestLabel"
+                            >Support Request</label
+                        >
+                        <br />
+                    </fieldset>
+                    <p
+                        class="errMsg"
+                        aria-labelledby="qtypeLabel genquiryLabel qtypeLabel srequestLabel"
+                    >
+                        Please select a query type
+                    </p>
 
-  Message
-  This field is required
+                    <div class="inputCntr">
+                        <label for="msg" id="msgLabel"
+                            >Message <span aria-hidden="true">*</span></label
+                        >
+                        <br />
+                        <input
+                            type="text"
+                            name="msg"
+                            id="msg"
+                            autocomplete="off"
+                            required
+                        />
+                    </div>
+                    <p id="msgErr" aria-labelledby="msgLabel">
+                        This field is required
+                    </p>
 
-  I consent to being contacted by the team
-  To submit this form, please consent to being contacted
+                    <div class="inputCntr">
+                        <input
+                            type="checkbox"
+                            name="consent"
+                            id="consent"
+                            required
+                        />
+                        <label for="consent" id="consentLabel">
+                            I consent to being contacted by the team
+                            <span aria-hidden="true">*</span>
+                        </label>
+                    </div>
+                    <p aria-labelledby="consentLabel">
+                        To submit this form, please consent to being contacted
+                    </p>
 
-  Submit
-
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon!
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+                    <input type="submit" value="Submit" id="submit" />
+                </fieldset>
+            </form>
+        </main>
+        <footer>
+            <ul class="attribution">
+                <li>
+                    Challenge by
+                    <a href="https://www.frontendmentor.io?ref=challenge"
+                        >Frontend Mentor</a
+                    >.
+                </li>
+                <li>
+                    Coded by
+                    <a href="https://github.com/codematrix95?tab=repositories"
+                        >Codematrix95</a
+                    >.
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
+
+<!-- Message Sent! Thanks for completing the form. We'll be in touch
+            soon! -->
