Updated how errors are handled so you can see them sequential

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             required
                         />
                     </div>
-                    <p id="fnameErr" aria-labelledby="fnameLabel">
+                    <p class="errMsg" id="fnameErr" aria-labelledby="fnameLabel">
                         This field is required
                     </p>
 
@@ -62,7 +62,7 @@
                             required
                         />
                     </div>
-                    <p id="lnameErr" aria-labelledby="lnameLabel">
+                    <p class="errMsg" id="lnameErr" aria-labelledby="lnameLabel">
                         This field is required
                     </p>
 
@@ -79,11 +79,11 @@
                             required
                         />
                     </div>
-                    <p id="emailErr" aria-labelledby="emailLabel">
+                    <p class="errMsg" id="emailErr" aria-labelledby="emailLabel">
                         Please enter a valid email address
                     </p>
 
-                    <fieldset class="inputCntr">
+                    <fieldset class="inputCntr fieldset">
                         <legend id="qtypeLabel">Query Type</legend>
                         <input
                             type="radio"
@@ -126,7 +126,7 @@
                             required
                         />
                     </div>
-                    <p id="msgErr" aria-labelledby="msgLabel">
+                    <p class="errMsg" id="msgErr" aria-labelledby="msgLabel">
                         This field is required
                     </p>
 
@@ -142,7 +142,7 @@
                             <span aria-hidden="true">*</span>
                         </label>
                     </div>
-                    <p aria-labelledby="consentLabel">
+                    <p class="errMsg" aria-labelledby="consentLabel">
                         To submit this form, please consent to being contacted
                     </p>
 
