refactored code into functions to remove repetitive code

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         Please enter a valid email address
                     </p>
 
-                    <fieldset class="inputCntr fieldset">
+                    <fieldset class="inputCntr" id="qtype">
                         <legend id="qtypeLabel">Query Type</legend>
                         <input
                             type="radio"
