--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             href="./assets/images/favicon-32x32.png"
         />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
         <link
             href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/main.css"/>
         <script src="/js/main.js" type="module" defer></script>
         <!-- <script src="https://smtpjs.com/v3/smtp.js" defer></script> -->
 
