--- a/index.html
+++ b/index.html
@@ -264,9 +264,8 @@
                                     name="consent"
                                     id="consent"
                                     required
-                                    class="consent hover-greenMedium"
                                 />
-                                <svg
+                                <!-- <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="18"
                                     height="18"
@@ -278,7 +277,7 @@
                                         fill="#0C7D69"
                                         d="M16.5 0h-15A1.5 1.5 0 0 0 0 1.5v15A1.5 1.5 0 0 0 1.5 18h15a1.5 1.5 0 0 0 1.5-1.5v-15A1.5 1.5 0 0 0 16.5 0Zm-3.22 7.28-5.25 5.25a.748.748 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l1.72 1.72 4.72-4.72a.751.751 0 0 1 1.06 1.06Z"
                                     />
-                                </svg>
+                                </svg> -->
                                 <label for="consent" id="consentLabel">
                                     I consent to being contacted by the team
                                     <span aria-hidden="true"> *</span>
@@ -313,7 +312,7 @@
                     <li class="d-flex justify-content-center">
                         Coded by
                         <a
-                            href="https://github.com/codematrix95?tab=repositories"
+                            class="ms-1" href="https://github.com/codematrix95?tab=repositories"
                             >Codematrix95</a
                         >
                     </li>
@@ -323,5 +322,4 @@
     </body>
 </html>
 
-<!-- Message Sent! Thanks for completing the form. We'll be in touch
-            soon! -->
+<!-- class="consent hover-greenMedium" -->
