--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <link rel="stylesheet" href="css/main.css" />
 
-        <script src="/js/main.js" type="module" defer></script>
+        <script type="module" src="js/main.js" defer></script>
         <title>Frontend Mentor | Contact form</title>
     </head>
     <body>
